objects/GP_Condicional_logico__c.object
<CustomObject>
    <description>Condicional de regla - Gestor de Puntos</description>
    <fields>
        <fullName>Operador__c</fullName>
        <label>Operador</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Variable_a_comparar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regla__c</fullName>
        <label>Regla</label>
        <referenceTo>GP_Regla__c</referenceTo>
        <relationshipLabel>Condicionales logicos</relationshipLabel>
        <relationshipName>Condicionales_logicos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SeComparaContraElValorFijo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SeComparaContraElValorFijo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valor_Booleano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valor Booleano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valor_contra_el_que_se_compara__c</fullName>
        <label>Valor contra el que se compara</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Variable_a_comparar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TRIAL</fullName>
                </value>
                <value>
                    <fullName>BLACK</fullName>
                </value>
                <value>
                    <fullName>CLASSIC</fullName>
                </value>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS</fullName>
                </value>
                <value>
                    <fullName>GGCC</fullName>
                </value>
                <value>
                    <fullName>MOVIL-PREPAGO</fullName>
                </value>
                <value>
                    <fullName>MOVIL-ABONO</fullName>
                </value>
                <value>
                    <fullName>ARNET</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>PREPAGO-A-ABONO FIJO</fullName>
                </value>
                <value>
                    <fullName>ABONO FIJO-A-FACTURA</fullName>
                </value>
                <value>
                    <fullName>INTERNET-MAS-VELOCIDAD</fullName>
                </value>
                <value>
                    <fullName>CABLE-SUMAR FLOW</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>MID</fullName>
                </value>
                <value>
                    <fullName>MID HIGH</fullName>
                </value>
                <value>
                    <fullName>PREMIUM</fullName>
                </value>
                <value>
                    <fullName>integer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_entero__c</fullName>
        <label>Valor entero</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variable_a_comparar__c</fullName>
        <label>Variable a comparar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Categoria De Socio</fullName>
                </value>
                <value>
                    <fullName>Tipo De Cliente</fullName>
                </value>
                <value>
                    <fullName>Tipo De Servicio</fullName>
                </value>
                <value>
                    <fullName>Tipo De Upselling</fullName>
                </value>
                <value>
                    <fullName>Equipo Categoria</fullName>
                </value>
                <value>
                    <fullName>Monto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variable_contra_la_que_se_compara__c</fullName>
        <description>Variable contra la que se compara</description>
        <label>Variable contra la que se compara</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>GP Condicional logico</label>
    <nameField>
        <label>Condicional logico</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condicionales logicos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>